# dataset-processor

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
dataset_processor_api/: .dockerignore  .env.example  README.md  alembic.ini  mkdocs.yml  pyproject.toml
dataset_processor_api/docker/: api.Dockerfile  worker.Dockerfile
dataset_processor_api/docs/: api-workflow.md  architecture.md  index.md  operations.md  processing-pipeline.md
dataset_processor_api/docs/reference/: core.md  db.md  worker.md
dataset_processor_api/migrations/: env.py
dataset_processor_api/migrations/versions/: 20260131_000001_create_datasets_jobs_reports.py
dataset_processor_api/src/api/: main.py
dataset_processor_api/src/api/routes/: datasets.py
dataset_processor_api/src/core/: __init__.py  config.py
dataset_processor_api/src/db/: __init__.py  session.py
dataset_processor_api/src/processing/: stats.py
dataset_processor_api/src/services/: datasets.py  jobs.py  storage.py
dataset_processor_api/tests/: conftest.py
dataset_processor_api/tests/api/routes/: test_datasets.py  test_jobs.py
dataset_processor_api/tests/e2e/: test_async_flow.py
dataset_processor_api/tests/processing/: test_anomalies.py  test_parsers.py
dataset_processor_api/tests/services/: test_storage.py
dataset_processor_web/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
dataset_processor_web/src/: App.css  App.tsx  index.css  main.tsx
dataset_processor_web/src/components/: ReportPanel.tsx  StatusPill.tsx
dataset_processor_web/src/hooks/: useJobPolling.ts
dataset_processor_web/src/lib/: api.test.ts  api.ts  format.ts
dataset_processor_web/src/types/: api.ts
docker/: api.Dockerfile  worker.Dockerfile
docs/: api-workflow.md  architecture.md  logging.md  operations.md
docs/reference/: api.md  index.md  processing.md  services.md  utils.md
migrations/versions/: 20260206_000002_add_active_job_unique_index.py  20260207_000003_drop_reports_report_json.py
postman/: dataset-processor.postman_collection.json
src/: __init__.py
src/api/: main.py
src/api/routes/: datasets.py  jobs.py  reports.py
src/core/: config.py  errors.py  logging.py  schemas.py
src/db/: base.py  models.py  session.py
src/processing/: __init__.py  anomalies.py  parsers.py  stats.py
src/services/: datasets.py  jobs.py  storage.py
src/utils/: checksum.py
src/worker/: celery_app.py  tasks.py
tests/: conftest.py
tests/api/routes/: test_datasets.py  test_logging.py
tests/core/: test_logging_config.py
tests/processing/: test_stats.py
tests/services/: test_datasets_service.py  test_jobs_service.py
tests/worker/: test_tasks.py
