[project]
name = "dataset-processor"
version = "0.1.0"
description = "Dataset Processor (Study Project)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "celery>=5.6.2",
    "fastapi[standard]>=0.128.0",
    "minio>=7.2.5",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "celery-types>=0.24.0",
    "httpx>=0.28.1",
    "ipython>=9.9.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
    "taskipy>=1.14.1",
    "testcontainers[minio,postgres]>=4.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "SIM",
    "C4",
    "A",
    "ARG",
    "PIE",
    "RET",
    "SLF",
    "TCH",
    "TID",
    "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"src/api/routes/datasets.py" = ["TCH002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
show_error_codes = true
pretty = true
files = ["src", "tests"]
exclude = "(^migrations/)"
plugins = ["pydantic.mypy"]


[tool.taskipy.tasks]
format = "uv run ruff format"
format-check = "uv run ruff format --check"
lint = "uv run ruff check"
lint-fix = "uv run ruff check --fix"
typecheck = "uv run mypy"
qa = "uv run task format-check && uv run task lint && uv run task typecheck"
check = "uv run task qa"

test = "uv run pytest"
test-fast = "uv run pytest -m 'not e2e'"
test-e2e = "uv run pytest -m e2e"
verify = "uv run task qa && uv run task test-fast"
verify-all = "uv run task qa && uv run task test"

stack-up = "docker compose up -d"
stack-rebuild = "docker compose up -d --build"
stack-down = "docker compose down"
stack-ps = "docker compose ps"
stack-logs = "docker compose logs -f api worker"

db-upgrade = "docker compose run --rm api alembic upgrade head"
db-downgrade = "docker compose run --rm api alembic downgrade -1"
db-current = "docker compose run --rm api alembic current"
db-history = "docker compose run --rm api alembic history"
db-revision = "docker compose run --rm api alembic revision --autogenerate"
migrate = "uv run task db-upgrade"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests with real broker/worker integration",
]
filterwarnings = [
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning:testcontainers\\.core\\.waiting_utils",
]
